force-app/main/default/objects/Plot__c/fields/Total_Corpus_Fund__c.field-meta.xml
<CustomField>
    <fullName>Total_Corpus_Fund__c</fullName>
    <formula>Built_up_area__c * Corpus_Fund__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Corpus Fund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>