force-app/main/default/objects/Plot__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>Basic_Cost_with_CP__c +Infrastructure_Charges_per_sqft__c+Floor_Rise__c+Legal_Documentation_Charges__c+ Clubhouse_Charges__c + TNEB__c + Piped_Gas__c + Interior_Charges__c
+ GST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>