force-app/main/default/objects/Plot__c/fields/Total_Maintenance_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_Maintenance_Charge__c</fullName>
    <formula>Maintenance_Charge__c  *  Premium_Charges_on_Facing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintenance Charges For 2 years</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>