force-app/main/default/objects/Plot__c/fields/UDS_in_Sqyards__c.field-meta.xml
<CustomField>
    <fullName>UDS_in_Sqyards__c</fullName>
    <label>UDS (Sq.ft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>