force-app/main/default/objects/Plot__c/fields/Undivided_Share_of_Land__c.field-meta.xml
<CustomField>
    <fullName>Undivided_Share_of_Land__c</fullName>
    <label>Not in use</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>