force-app/main/default/objects/Plot__c/fields/Unit_Configuration_Name__c.field-meta.xml
<CustomField>
    <fullName>Unit_Configuration_Name__c</fullName>
    <label>Unit Configuration Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>