force-app/main/default/objects/Plot__c/fields/Unit_Facing_Direction__c.field-meta.xml
<CustomField>
    <fullName>Unit_Facing_Direction__c</fullName>
    <label>Unit Facing Direction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EAST</fullName>
            </value>
            <value>
                <fullName>WEST</fullName>
            </value>
            <value>
                <fullName>SOUTH</fullName>
            </value>
            <value>
                <fullName>NORTH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>