force-app/main/default/objects/Plot__c/validationRules/Restrict_selection_of_wrong_Record_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_selection_of_wrong_Record_Type</fullName>
    <active>true</active>
    <errorConditionFormula>(
    TEXT(Project__r.Project_Type__c) = &apos;Villas&apos; &amp;&amp;
    RecordType.DeveloperName = &apos;Apartment&apos;
)
||
(
    TEXT(Project__r.Project_Type__c) = &apos;Apartments&apos; &amp;&amp;
    RecordType.DeveloperName &lt;&gt; &apos;Apartment&apos;
)</errorConditionFormula>
    <errorMessage>Please select the appropriate Record Type.</errorMessage>
</ValidationRule>