force-app/main/default/objects/Plot__c/validationRules/Super_build_up_area_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Super_build_up_area_validation</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.Name  == &apos;Villa&apos;  &amp;&amp;
 Super_Built_up_Area__c &lt;  Plot_Land_Area__c</errorConditionFormula>
    <errorDisplayField>Plot_Land_Area__c</errorDisplayField>
    <errorMessage>Plot land area can&apos;t be more than super build up area</errorMessage>
</ValidationRule>