force-app/main/default/objects/Plot__c/listViews/Apartment_Units.listView-meta.xml
<ListView>
    <fullName>Apartment_Units</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Unit_Type__c</field>
        <operation>equals</operation>
        <value>Apartment</value>
    </filters>
    <label>Apartment Units</label>
</ListView>