force-app/main/default/objects/Plot__c/listViews/Row_House.listView-meta.xml
<ListView>
    <fullName>Row_House</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Unit_Type__c</field>
        <operation>equals</operation>
        <value>Row House</value>
    </filters>
    <label>Row House Units</label>
</ListView>