force-app/main/default/objects/Plot__c/listViews/Villa_Units.listView-meta.xml
<ListView>
    <fullName>Villa_Units</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Unit_Type__c</field>
        <operation>equals</operation>
        <value>Villa</value>
    </filters>
    <label>Villa Units</label>
</ListView>