force-app/main/default/objects/Plot__c/listViews/Villas.listView-meta.xml
<ListView>
    <fullName>Villas</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Project__c</columns>
    <columns>Block_Lookup__c</columns>
    <columns>Super_Built_up_Area__c</columns>
    <columns>Rate_per_sqft__c</columns>
    <columns>Unit_Facing_Direction__c</columns>
    <columns>Status__c</columns>
    <columns>BHK_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Plot__c.Villa</value>
    </filters>
    <label>Villas</label>
</ListView>